2004-02-16  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c
	(ax_slowkeys_warning_dialog_post) : fix cut-n-paste-o in the message

2004-02-16  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c : include
	  libgnome/gnome-help.h to avoid potential crash on 64 bit arches.
	(ax_response_callback) : actually display the error message on
	  failure.

2004-02-15  Anders Carlsson  <andersca@gnome.org>

	* actions/Makefile.am: Link with ALSA_LIBS.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-settings-accessibility-keyboard.c: (ax_response_callback): Update
	help link to point to user-guide.xml

Mon Jan 19 11:49:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-settings-xsettings.c (gnome_xft_settings_get): Set the
	correct default dpi.

2004-01-16  Christophe Merlet  <redfox@redfoxcenter.org>

	* Makefile.am: Add DESTDIR variable in install-data-hook section.

2004-01-15  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: fix locating the
	pixmaps when compiling with a prefix not ending in '/'

2004-01-14  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnome-settings-multimedia-keys.c: fix build on Linux/PPC machines
	(the only ones to use the FB-Level code)

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-14  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: fix compilation with FB Level enabled
	* actions/acme.h: fix a stupid typo that made the WWW key not work
	* gnome-settings-multimedia-keys.c: (acme_get_screen_from_event),
	(acme_filter_events), (gnome_settings_multimedia_keys_init):
	only get the current screen if we actually need to, fix locating the
	glade file when compiling with a prefix not ending in '/'

2004-01-13  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (acme_filter_events): let's
	simplify some code
