@@ -1,3 +1,9 @@
+2004-02-24  Mariano Suárez-Alvarez <mariano@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c
+	(ax_slowkeys_warning_dialog_post) : fix a typo in a variable name, bug
+	#134699.
+	
 2004-02-16  Jody Goldberg <jody@gnome.org>
 
 	* gnome-settings-accessibility-keyboard.c
